refactor(admin): Simplify admin management through role updates